--- a/wedding/components/Header/Header.module.css
+++ b/wedding/components/Header/Header.module.css
@@ -4,8 +4,9 @@
 }
 
 .header {
-  height: 60px;
+  min-height: 60px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
