--- a/wedding/components/Logo/Logo.module.css
+++ b/wedding/components/Logo/Logo.module.css
@@ -1,11 +1,7 @@
 .logo {
-  display: inline-block;
-  height: 42px;
-}
-
-.ampersand {
-  position: relative;
-  top: 6px;
+  display: flex;
+  align-items: center;
+  height: 60px;
 }
 
 .john,
