Heart hover and next/image for splash

--- a/wedding/components/Header/Header.module.css
+++ b/wedding/components/Header/Header.module.css
@@ -1,6 +1,14 @@
 .headerWrapper {
   position: sticky;
   top: 0;
+  z-index: 1;
+  height: 0;
+}
+
+@media (min-width: 550px) {
+  .headerWrapper {
+    height: auto;
+  }
 }
 
 .header {
