--- a/wedding/styles/Home.module.css
+++ b/wedding/styles/Home.module.css
@@ -1,7 +1,5 @@
 .splashImage {
-  background: url('/mt-evans.jpg');
-  background-size: cover;
-  background-position: 66%;
+  position: relative;
   height: 600px;
   max-width: 1100px;
   margin: 0 auto;
