--- a/wedding/styles/RSVP.module.css
+++ b/wedding/styles/RSVP.module.css
@@ -2,6 +2,7 @@
   width: 100%;
   max-width: 500px;
   margin: 50px auto;
+  padding: 0 30px;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
