--- a/wedding/components/Text/Text.module.css
+++ b/wedding/components/Text/Text.module.css
@@ -22,13 +22,16 @@
 }
 
 .body1 {
-  font-size: 0.875rem;
+  font-size: 1.25rem;
+  line-height: 1.5;
 }
 
 .body2 {
-  font-size: 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
 }
 
 .body3 {
-  font-size: 0.625rem;
+  font-size: 0.875rem;
+  line-height: 1.5;
 }
