--- a/wedding/styles/registry.module.css
+++ b/wedding/styles/registry.module.css
@@ -1,8 +1,6 @@
-.headingWrapper {
+.registryWrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
-
-  margin-top: 20px;
-  margin-bottom: 30px;
+  gap: 30px;
 }
