--- a/wedding/components/Navbar/Navbar.module.css
+++ b/wedding/components/Navbar/Navbar.module.css
@@ -12,6 +12,7 @@
   left: 32px;
   z-index: 101;
   padding: 0;
+  color: black;
 }
 
 .mobileNavHamburger > svg {
@@ -27,9 +28,9 @@
 
 .mobileNav {
   position: absolute;
+  top: 100px;
   left: 0;
   width: 100%;
-  bottom: 250px;
 }
 
 .mobileNav ul {
