--- a/wedding/styles/rsvp.module.css
+++ b/wedding/styles/rsvp.module.css
@@ -1,8 +1,11 @@
-.rsvpForm {
+.pageContainer {
   width: 100%;
   max-width: 500px;
   margin: 50px auto;
   padding: 0 30px;
+}
+
+.rsvpForm {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
