--- a/wedding/src/components/Button/Button.module.css
+++ b/wedding/src/components/Button/Button.module.css
@@ -5,7 +5,7 @@
   cursor: pointer;
   touch-action: manipulation;
 
-  padding: 10px;
+  padding: 10px 20px;
   border-radius: 4px;
   border: none;
   box-shadow: 2px 2px 0px var(--mountain-snow-70);
