--- a/wedding/src/components/Navbar/NavLinks.module.css
+++ b/wedding/src/components/Navbar/NavLinks.module.css
@@ -1,5 +1,6 @@
 .active {
-  text-decoration: underline;
+  text-decoration-line: underline;
+  text-decoration-thickness: 3px;
   text-underline-offset: 10px;
   text-decoration-color: hsl(330deg, 100%, 75%);
 }
