--- a/wedding/src/components/Header/Header.module.css
+++ b/wedding/src/components/Header/Header.module.css
@@ -6,7 +6,7 @@
 
 .header {
   min-height: 60px;
-  background-color: white;
+  background-color: var(--background-primary);
   display: flex;
   flex-direction: column;
   justify-content: center;
