--- a/wedding/src/components/Navbar/NavLinks.module.css
+++ b/wedding/src/components/Navbar/NavLinks.module.css
@@ -2,5 +2,5 @@
   text-decoration-line: underline;
   text-decoration-thickness: 3px;
   text-underline-offset: 10px;
-  text-decoration-color: hsl(330deg, 100%, 75%);
+  text-decoration-color: var(--foreground-pink);
 }
