--- a/wedding/src/styles/globals.css
+++ b/wedding/src/styles/globals.css
@@ -65,6 +65,12 @@ select {
   --mountain-grey-90: hsla(0, 0%, 20%, 1);
 
   --champagne-pink: hsl(25deg 58% 80%);
+  --background-primary: white;
+  --foreground-primary: black;
+  --foreground-pink: hsl(330deg, 100%, 75%);
+}
+
+.teaser {
   --background-primary: #101010;
   --foreground-primary: var(--champagne-pink);
   --foreground-pink: hsl(330deg, 100%, 75%);
