--- a/wedding/src/styles/home.module.css
+++ b/wedding/src/styles/home.module.css
@@ -1,7 +1,7 @@
 .splashImage {
   position: relative;
   max-width: min(1100px, 95%);
-  aspect-ratio: 9 / 6;
+  aspect-ratio: 4 / 5;
   margin: 0 auto;
 }
 
@@ -21,6 +21,10 @@
 }
 
 @media (min-width: 700px) {
+  .splashImage {
+    aspect-ratio: 9 / 6;
+  }
+
   .teaserImage {
     display: block;
   }
