--- a/wedding/src/styles/globals.css
+++ b/wedding/src/styles/globals.css
@@ -66,7 +66,10 @@ html[data-theme='light'] {
   --mountain-grey-90: hsla(0, 0%, 20%, 1);
 
   --champagne-pink: hsl(25deg 58% 80%);
-  --background-primary: white;
+  --lime: hsl(122deg 53% 26%);
+  --orange: hsl(30deg 100% 47%);
+  --ivory: hsl(60deg 100% 97%);
+  --background-primary: var(--ivory);
   --foreground-primary: black;
   --foreground-pink: hsl(330deg, 100%, 75%);
 }
