--- a/wedding/src/components/RSVPForm/index.module.scss
+++ b/wedding/src/components/RSVPForm/index.module.scss
@@ -1,10 +1,3 @@
-.pageContainer {
-  width: 100%;
-  max-width: 500px;
-  margin: 50px auto;
-  padding: 0 30px;
-}
-
 .rsvpForm {
   display: flex;
   flex-direction: column;
@@ -15,14 +8,10 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-}
 
-.formItem label {
-  margin-bottom: 4px;
-}
-
-.submitButton {
-  align-self: flex-end;
+  label {
+    margin-bottom: 4px;
+  }
 }
 
 .foundInvite {
@@ -32,14 +21,18 @@
   gap: 8px;
 }
 
+.rowItems {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .editRow {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.rowItems {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+.submitButton {
+  align-self: flex-end;
 }
