--- a/wedding/src/components/Calendar/Calendar.module.scss
+++ b/wedding/src/components/Calendar/Calendar.module.scss
@@ -9,7 +9,7 @@
 
   position: absolute;
   width: 3px;
-  height: 1400px;
+  height: 1000px;
   top: 50px;
   left: 50%;
 }
@@ -74,8 +74,20 @@
   color: white;
   border-radius: 20px;
   padding: 20px;
+  z-index: 3;
 
   h2 {
     margin-top: 0;
   }
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 2;
+
+  background-color: hsla(var(--ivory-raw) / 80%);
 }
