--- a/wedding/src/components/Calendar/Calendar.module.scss
+++ b/wedding/src/components/Calendar/Calendar.module.scss
@@ -56,6 +56,7 @@
     gap: 20px;
     top: var(--top);
     left: calc(50% - calc(var(--dot-width) / 2) + 2px);
+    color: inherit;
     background: unset;
     border: none;
     padding: 0;
