--- a/wedding/src/styles/globals.css
+++ b/wedding/src/styles/globals.css
@@ -66,8 +66,13 @@ html[data-theme='light'] {
   --mountain-grey-90: hsla(0, 0%, 20%, 1);
 
   --champagne-pink: hsl(25deg 58% 80%);
-  --background-primary: white;
+  --lime: hsl(122deg 53% 26%);
+  --orange: hsl(30deg 100% 47%);
+  --ivory-raw: 60deg 100% 97%;
+  --ivory: hsl(var(--ivory-raw));
+  --background-primary: var(--ivory);
   --foreground-primary: black;
+  --foreground-inverse: var(--ivory);
   --foreground-pink: hsl(330deg, 100%, 75%);
 }
 
