Adds golf question to RSVP form

--- a/wedding/src/components/RSVPForm/index.module.scss
+++ b/wedding/src/components/RSVPForm/index.module.scss
@@ -36,3 +36,10 @@
 .submitButton {
   align-self: flex-end;
 }
+
+.golfContainer {
+  padding: 1rem 0 1rem 2rem;
+  display: flex;
+  justify-content: space-between;
+  gap: 16px;
+}
