--- a/wedding/src/components/TextInput/TextInput.module.css
+++ b/wedding/src/components/TextInput/TextInput.module.css
@@ -1,8 +1,8 @@
 .input {
   padding: 10px;
   border-radius: 4px;
-  border: 1px solid var(--mountain-grey-50);
+  border: 1px solid var(--grey-50);
   font-family: var(--font-family-body);
-  color: var(--mountain-grey-70);
+  color: var(--grey-70);
   background-color: transparent;
 }
