--- a/wedding/src/styles/globals.css
+++ b/wedding/src/styles/globals.css
@@ -42,34 +42,35 @@ html[data-theme='light'] {
   --font-family-body: var(--catamaran-font);
   --font-family-heading: var(--fiona-font);
 
-  --mountain-snow-0: hsla(213, 44%, 95.1%, 1);
-  --mountain-snow-10: hsla(211, 41.2%, 90%, 1);
-  --mountain-snow-20: hsla(211, 40.3%, 84.9%, 1);
-  --mountain-snow-40: hsla(212, 40.2%, 75.1%, 1);
-  --mountain-snow-50: hsla(212, 34.6%, 70%, 1);
-  --mountain-snow-70: hsla(213, 24.9%, 55.1%, 1);
-  --mountain-snow-90: hsla(212, 34.6%, 30%, 1);
-  --mountain-snow-100: hsla(212, 39.2%, 20%, 1);
-  --mountain-sunset-0: hsla(40, 60%, 95.1%, 1);
-  --mountain-sunset-10: hsla(39, 60.5%, 85.1%, 1);
-  --mountain-sunset-20: hsla(33, 50%, 74.9%, 1);
-  --mountain-sunset-40: hsla(33, 50%, 60%, 1);
-  --mountain-sunset-50: hsla(33, 49.8%, 50%, 1);
-  --mountain-sunset-70: hsla(33, 50%, 40%, 1);
-  --mountain-sunset-90: hsla(33, 50.3%, 30%, 1);
-  --mountain-sunset-100: hsla(33, 51%, 20%, 1);
-  --mountain-grey-10: hsla(0, 0%, 93.3%, 1);
-  --mountain-grey-20: hsla(0, 0%, 86.7%, 1);
-  --mountain-grey-40: hsla(0, 0%, 66.7%, 1);
-  --mountain-grey-50: hsla(0, 0%, 50.2%, 1);
-  --mountain-grey-70: hsla(0, 0%, 32.9%, 1);
-  --mountain-grey-90: hsla(0, 0%, 20%, 1);
+  --snow-0: hsla(213, 44%, 95.1%, 1);
+  --snow-10: hsla(211, 41.2%, 90%, 1);
+  --snow-20: hsla(211, 40.3%, 84.9%, 1);
+  --snow-40: hsla(212, 40.2%, 75.1%, 1);
+  --snow-50: hsla(212, 34.6%, 70%, 1);
+  --snow-70: hsla(213, 24.9%, 55.1%, 1);
+  --snow-90: hsla(212, 34.6%, 30%, 1);
+  --snow-100: hsla(212, 39.2%, 20%, 1);
+  --sunset-0: hsla(40, 60%, 95.1%, 1);
+  --sunset-10: hsla(39, 60.5%, 85.1%, 1);
+  --sunset-20: hsla(33, 50%, 74.9%, 1);
+  --sunset-40: hsla(33, 50%, 60%, 1);
+  --sunset-50: hsla(33, 49.8%, 50%, 1);
+  --sunset-70: hsla(33, 50%, 40%, 1);
+  --sunset-90: hsla(33, 50.3%, 30%, 1);
+  --sunset-100: hsla(33, 51%, 20%, 1);
+  --grey-10: hsla(0, 0%, 93.3%, 1);
+  --grey-20: hsla(0, 0%, 86.7%, 1);
+  --grey-40: hsla(0, 0%, 66.7%, 1);
+  --grey-50: hsla(0, 0%, 50.2%, 1);
+  --grey-70: hsla(0, 0%, 32.9%, 1);
+  --grey-90: hsla(0, 0%, 20%, 1);
 
   --champagne-pink: hsl(25deg 58% 80%);
   --lime: hsl(122deg 53% 26%);
   --orange: hsl(30deg 100% 47%);
   --ivory-raw: 60deg 100% 97%;
   --ivory: hsl(var(--ivory-raw));
+
   --background-primary: var(--ivory);
   --foreground-primary: black;
   --foreground-inverse: var(--ivory);
