--- a/wedding/src/components/Text/Text.module.css
+++ b/wedding/src/components/Text/Text.module.css
@@ -4,20 +4,20 @@
 }
 
 .heading1 {
-  font-size: 1.75rem;
+  font-size: 2.5rem;
 }
 
 .heading2 {
-  font-size: 1.5rem;
+  font-size: 2rem;
 }
 
 .heading3 {
-  font-size: 1.25rem;
+  font-family: var(--font-family-body);
+  font-size: 1.125rem;
 }
 
 .body {
   font-family: var(--font-family-body);
-  font-weight: 300;
 }
 
 .body1 {
