--- a/wedding/src/components/Navigation/DesktopNav.module.css
+++ b/wedding/src/components/Navigation/DesktopNav.module.css
@@ -21,4 +21,5 @@
 .navbar ul li {
   font-family: var(--font-family-heading, var(--system-font));
   font-size: 1.5rem;
+  text-transform: lowercase;
 }
