--- a/wedding/src/components/Text/Text.module.css
+++ b/wedding/src/components/Text/Text.module.css
@@ -1,24 +1,23 @@
 .heading {
   font-family: var(--font-family-heading);
-
   margin: 0.25em 0;
 }
 
 .heading1 {
-  font-size: 1.75rem;
+  font-size: 2.5rem;
 }
 
 .heading2 {
-  font-size: 1.5rem;
+  font-size: 2rem;
 }
 
 .heading3 {
-  font-size: 1.25rem;
+  font-family: var(--font-family-body);
+  font-size: 1.125rem;
 }
 
 .body {
   font-family: var(--font-family-body);
-  font-weight: 300;
 }
 
 .body1 {
@@ -34,4 +33,8 @@
 .body3 {
   font-size: 0.875rem;
   line-height: 1.5;
+}
+
+.bold {
+  font-weight: 500;
 }
