--- a/wedding/src/components/Layout/Layout.module.scss
+++ b/wedding/src/components/Layout/Layout.module.scss
@@ -1,7 +1,13 @@
 .fill {
   display: flex;
   flex-direction: column;
-  min-height: 90vh;
+  min-height: calc(100vh - 60px); // mobile header height
+}
+
+@media (min-width: 550px) {
+  .fill {
+    min-height: calc(100vh - 144px); // desktop header height
+  }
 }
 
 .main {
