--- a/wedding/src/components/Calendar/Calendar.module.scss
+++ b/wedding/src/components/Calendar/Calendar.module.scss
@@ -92,9 +92,18 @@
   border-radius: 20px;
   padding: 16px 32px;
   z-index: 3;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
 
   h2 {
     margin-top: 0;
+  }
+
+  .iconRow {
+    display: flex;
+    align-items: center;
+    gap: 8px;
   }
 }
 
