update nav to scroll

--- a/wedding/src/components/Layout/Layout.module.scss
+++ b/wedding/src/components/Layout/Layout.module.scss
@@ -16,6 +16,6 @@
 
 .footer {
   background-image: url('/s/evergreens.png');
-  background-position: bottom;
+  background-position: bottom left;
   height: 375px;
 }
