--- a/wedding/src/components/Navigation/MobileNav.module.css
+++ b/wedding/src/components/Navigation/MobileNav.module.css
@@ -7,7 +7,7 @@
 .mobileNavHamburger {
   background: none;
   border: none;
-  position: fixed;
+  position: absolute;
   top: 18px;
   left: 32px;
   z-index: 2;
