--- a/wedding/src/pages/weekend.module.scss
+++ b/wedding/src/pages/weekend.module.scss
@@ -8,13 +8,8 @@
   margin: 0 auto;
 }
 
-.thingsBackground {
-  background-color: var(--dark-orange);
-  color: var(--ivory);
-}
-
 .thingsContainer {
-  padding: 0 2rem;
+  padding: 100px 2rem 0 2rem;
   max-width: 800px;
   margin: 0 auto;
   text-align: center;
