--- a/wedding/src/pages/evergreen.module.scss
+++ b/wedding/src/pages/evergreen.module.scss
@@ -1,6 +1,5 @@
 .thingsContainer {
-  padding: 0 2rem;
-  max-width: 800px;
+  width: min(85%, 450px);
   margin: 0 auto;
   text-align: center;
 
@@ -10,19 +9,43 @@
   }
 
   .category {
-    margin-bottom: 40px;
+    margin-bottom: 80px;
 
     ul {
       list-style: none;
       padding: 0;
+      margin: 0;
       display: flex;
       flex-direction: column;
-      gap: 20px;
+      gap: 60px;
 
       li {
-        display: grid;
-        place-content: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 8px;
       }
     }
   }
+}
+
+.thing {
+  .locationInfo {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 100%;
+    color: var(--grey-70);
+  }
+
+  .description {
+    width: 100%;
+  }
+}
+
+.iconRow {
+  display: flex;
+  align-items: baseline;
+  gap: 4px;
 }
