--- a/wedding/src/components/Layout/Layout.module.scss
+++ b/wedding/src/components/Layout/Layout.module.scss
@@ -15,7 +15,26 @@
 }
 
 .footer {
-  background-image: url('/s/evergreens.png');
-  background-position: bottom left;
-  height: 375px;
+  // background-image: url('/s/evergreens.png');
+  // background-position: bottom left;
+  // height: 375px;
+  position: relative;
+
+  .withLove {
+    color: var(--ivory);
+    opacity: 0.6;
+    font-size: 0.75rem;
+
+    position: absolute;
+    bottom: 20px;
+    // margin-left: auto;
+    // margin-right: auto;
+    // left: 0;
+    right: 8%;
+    text-align: center;
+
+    i {
+      color: #a38a00;
+    }
+  }
 }
