Added figcaptions to carousel

--- a/wedding/src/pages/index.module.scss
+++ b/wedding/src/pages/index.module.scss
@@ -8,6 +8,16 @@
   position: relative;
   max-height: 750px;
   aspect-ratio: 4 / 5;
+  margin: 0;
+  margin-bottom: 36px;
+
+  figcaption {
+    position: absolute;
+    bottom: 0;
+    background: hsla(var(--ivory-raw) / 0.7);
+    padding: 4px 20px;
+    width: 100%;
+  }
 }
 
 .teaserImage {
