--- a/wedding/src/pages/index.module.scss
+++ b/wedding/src/pages/index.module.scss
@@ -17,6 +17,11 @@
     background: hsla(var(--ivory-raw) / 0.7);
     padding: 4px 20px;
     width: 100%;
+
+    span {
+      display: inline-block;
+      text-align: justify;
+    }
   }
 }
 
