--- a/wedding/src/pages/travel.module.scss
+++ b/wedding/src/pages/travel.module.scss
@@ -29,6 +29,10 @@
   gap: 8px;
 
   .description {
-    text-align: justify;
+    text-align: center;
+
+    p {
+      text-align: justify;
+    }
   }
 }
