--- a/wedding/src/pages/evergreen.module.scss
+++ b/wedding/src/pages/evergreen.module.scss
@@ -9,7 +9,7 @@
   }
 
   .category {
-    margin-bottom: 160px;
+    margin-bottom: 30px;
 
     ul {
       list-style: none;
@@ -17,7 +17,7 @@
       margin: 0;
       display: flex;
       flex-direction: column;
-      gap: 60px;
+      gap: 40px;
 
       li {
         display: flex;
@@ -25,6 +25,16 @@
         align-items: center;
         gap: 8px;
       }
+    }
+
+    &:not(:last-of-type):after {
+      content: '';
+      display: block;
+      height: 2px;
+      width: 100%;
+      margin: 0 auto;
+      background-color: var(--foreground-primary);
+      margin-top: 30px;
     }
   }
 }
