--- a/wedding/src/pages/travel.module.scss
+++ b/wedding/src/pages/travel.module.scss
@@ -8,8 +8,20 @@
     margin-bottom: 30px;
   }
 
+  .altitudeReminder {
+    margin-bottom: 30px;
+    background-color: var(--sunset-20);
+    border: 1px solid var(--sunset-40);
+    border-radius: 4px;
+    padding: 8px 16px;
+
+    p {
+      text-align: justify;
+    }
+  }
+
   .travelCategory {
-    margin-bottom: 80px;
+    margin-bottom: 30px;
 
     ul {
       list-style: none;
@@ -17,7 +29,17 @@
       margin: 0;
       display: flex;
       flex-direction: column;
-      gap: 60px;
+      gap: 40px;
+    }
+
+    &:not(:last-of-type):after {
+      content: '';
+      display: block;
+      height: 2px;
+      width: 100%;
+      margin: 0 auto;
+      background-color: var(--foreground-primary);
+      margin-top: 30px;
     }
   }
 }
@@ -33,6 +55,18 @@
 
     p {
       text-align: justify;
+    }
+  }
+
+  &.recommended {
+    // border: 2px solid var(--light-orange);
+    // border-radius: 8px;
+    // padding: 8px 16px;
+
+    &:before {
+      content: '✨ recommended option ✨';
+      color: var(--light-orange);
+      font-style: italic;
     }
   }
 }
