--- a/wedding/src/pages/index.module.scss
+++ b/wedding/src/pages/index.module.scss
@@ -18,10 +18,10 @@
     padding: 4px 20px;
     width: 100%;
 
-    span {
-      display: inline-block;
-      text-align: justify;
-    }
+    // span {
+    //   display: inline-block;
+    //   text-align: justify;
+    // }
   }
 }
 
