--- a/wedding/src/components/Navigation/MobileNav.module.css
+++ b/wedding/src/components/Navigation/MobileNav.module.css
@@ -8,9 +8,9 @@
   background: none;
   border: none;
   position: absolute;
-  top: 18px;
-  left: 32px;
-  z-index: 2;
+  top: 14px;
+  left: 28px;
+  z-index: 3;
   padding: 0;
   color: var(--foreground-primary);
 }
@@ -23,12 +23,12 @@
   position: fixed;
   inset: 0px;
   background: var(--background-primary);
-  z-index: 1;
+  z-index: 2;
 }
 
 .mobileNav {
   position: absolute;
-  top: 100px;
+  top: 50px;
   left: 0;
   width: 100%;
 }
@@ -43,4 +43,5 @@
   padding: 24px 0;
   font-family: var(--font-family-heading, var(--system-font));
   font-size: 1.75rem;
+  text-transform: lowercase;
 }
