--- a/wedding/src/styles/globals.scss
+++ b/wedding/src/styles/globals.scss
@@ -82,6 +82,7 @@ html {
 
   --ivory-raw: 60deg 100% 97%;
   --ivory: hsl(var(--ivory-raw));
+  --dark-ivory: hsl(60deg 60% 94%);
 
   --background-primary: var(--ivory);
   --foreground-primary: black;
