--- a/wedding/src/pages/faq.module.scss
+++ b/wedding/src/pages/faq.module.scss
@@ -1,10 +1,15 @@
 .faqContainer {
   width: min(85%, 450px);
   margin: 0 auto;
-  text-align: center;
 
   .header {
     margin-top: 20px;
     margin-bottom: 30px;
+  }
+
+  .faqList {
+    margin: 0;
+    padding: 0;
+    list-style: none;
   }
 }
