--- a/wedding/src/pages/index.module.scss
+++ b/wedding/src/pages/index.module.scss
@@ -1,6 +1,6 @@
 .homeContainer {
   text-align: center;
-  max-width: min(1100px, 95%);
+  max-width: min(2200px, 95%);
   margin: 0 auto;
 }
 
@@ -8,7 +8,7 @@
   position: relative;
   max-height: 750px;
   aspect-ratio: 4 / 5;
-  margin: 0;
+  margin: 0 auto;
   margin-bottom: 36px;
 
   figcaption {
