--- a/wedding/src/components/FAQ/FAQ.module.scss
+++ b/wedding/src/components/FAQ/FAQ.module.scss
@@ -1,9 +1,26 @@
 .faq {
-  margin-bottom: 40px;
+  margin-bottom: 20px;
 
   p {
-    display: inline-block;
+    // display: inline-block;
     text-align: justify;
-    text-align-last: center;
+    // text-align-last: center;
+  }
+
+  .faqToggle {
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    text-align: left;
+    padding: 0 0 20px 0;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .answer {
+    overflow: hidden;
   }
 }
