--- a/wedding/src/pages/evergreen.module.scss
+++ b/wedding/src/pages/evergreen.module.scss
@@ -1,15 +1,39 @@
 .thingsContainer {
   width: min(85%, 450px);
   margin: 0 auto;
-  text-align: center;
 
   .header {
+    text-align: center;
     margin-top: 20px;
     margin-bottom: 30px;
   }
 
   .category {
     margin-bottom: 30px;
+    overflow: hidden;
+
+    .categoryHeading {
+      background: unset;
+      border: none;
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      cursor: pointer;
+
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+
+      .categoryName {
+        text-align: center;
+      }
+
+      .categoryToggle {
+        position: absolute;
+        right: 0;
+      }
+    }
 
     ul {
       list-style: none;
@@ -22,7 +46,6 @@
       li {
         display: flex;
         flex-direction: column;
-        align-items: center;
         gap: 8px;
       }
     }
