color inherit on button

--- a/wedding/src/pages/evergreen.module.scss
+++ b/wedding/src/pages/evergreen.module.scss
@@ -15,6 +15,7 @@
     .categoryHeading {
       background: unset;
       border: none;
+      color: inherit;
       margin: 0;
       padding: 0;
       width: 100%;
