--- a/wedding/src/components/FAQ/FAQ.module.scss
+++ b/wedding/src/components/FAQ/FAQ.module.scss
@@ -4,6 +4,7 @@
   .faqToggle {
     background: transparent;
     border: none;
+    color: inherit;
     cursor: pointer;
     width: 100%;
     text-align: left;
