--- a/wedding/src/components/Calendar/Calendar.module.scss
+++ b/wedding/src/components/Calendar/Calendar.module.scss
@@ -52,6 +52,7 @@
     border: none;
     text-align: unset;
     cursor: pointer;
+    gap: 8px;
 
     background-color: var(--event-bg-color);
     color: var(--event-fg-color);
@@ -71,6 +72,7 @@
     place-items: center;
     padding-inline: 48px;
     text-align: justify;
+    width: 100%;
 
     h3 {
       text-align: center;
@@ -87,6 +89,7 @@
   display: flex;
   flex-direction: column;
   gap: 24px;
+  width: 100%;
 
   .metadata {
     display: flex;
@@ -96,13 +99,13 @@
     h3 {
       margin: 0;
     }
-
-    .iconRow {
-      display: flex;
-      align-items: center;
-      gap: 8px;
-    }
   }
+}
+
+.iconRow {
+  display: flex;
+  align-items: center;
+  gap: 8px;
 }
 
 .overlay {
