--- a/wedding/src/pages/evergreen.module.scss
+++ b/wedding/src/pages/evergreen.module.scss
@@ -22,12 +22,14 @@
       cursor: pointer;
 
       display: flex;
-      justify-content: center;
+      justify-content: space-between;
       align-items: center;
       position: relative;
 
       .categoryName {
-        text-align: center;
+        display: flex;
+        align-items: center;
+        gap: 8px;
       }
 
       .categoryToggle {
@@ -40,14 +42,18 @@
       list-style: none;
       padding: 0;
       margin: 0;
-      display: flex;
-      flex-direction: column;
-      gap: 40px;
 
-      li {
+      .thingsList {
+        padding-block: 20px;
         display: flex;
         flex-direction: column;
-        gap: 8px;
+        gap: 40px;
+
+        li {
+          display: flex;
+          flex-direction: column;
+          gap: 8px;
+        }
       }
     }
 
