--- a/wedding/src/pages/evergreen.module.scss
+++ b/wedding/src/pages/evergreen.module.scss
@@ -49,12 +49,6 @@
         display: flex;
         flex-direction: column;
         gap: 40px;
-
-        li {
-          display: flex;
-          flex-direction: column;
-          gap: 8px;
-        }
       }
     }
 
@@ -71,6 +65,14 @@
 }
 
 .thing {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+
+  h3 {
+    margin: 0;
+  }
+
   .locationInfo {
     display: flex;
     justify-content: space-between;
