--- a/wedding/src/pages/evergreen.module.scss
+++ b/wedding/src/pages/evergreen.module.scss
@@ -1,29 +1,54 @@
 .thingsContainer {
   width: min(85%, 450px);
   margin: 0 auto;
-  text-align: center;
 
   .header {
+    text-align: center;
     margin-top: 20px;
     margin-bottom: 30px;
   }
 
   .category {
     margin-bottom: 30px;
+    overflow: hidden;
+
+    .categoryHeading {
+      background: unset;
+      border: none;
+      color: inherit;
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      cursor: pointer;
+
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      position: relative;
+
+      .categoryName {
+        display: flex;
+        align-items: center;
+        text-align: left;
+        gap: 8px;
+      }
+
+      .categoryToggle {
+        position: absolute;
+        right: 0;
+      }
+    }
 
     ul {
       list-style: none;
       padding: 0;
       margin: 0;
-      display: flex;
-      flex-direction: column;
-      gap: 40px;
 
-      li {
+      .thingsList {
+        padding-block: 20px;
         display: flex;
         flex-direction: column;
-        align-items: center;
-        gap: 8px;
+        gap: 40px;
       }
     }
 
@@ -40,6 +65,14 @@
 }
 
 .thing {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+
+  h3 {
+    margin: 0;
+  }
+
   .locationInfo {
     display: flex;
     justify-content: space-between;
