--- a/wedding/src/pages/index.module.scss
+++ b/wedding/src/pages/index.module.scss
@@ -1,6 +1,6 @@
 .homeContainer {
   text-align: center;
-  max-width: min(1100px, 95%);
+  max-width: min(2200px, 95%);
   margin: 0 auto;
 }
 
@@ -8,20 +8,15 @@
   position: relative;
   max-height: 750px;
   aspect-ratio: 4 / 5;
-  margin: 0;
+  margin: 0 auto;
   margin-bottom: 36px;
 
   figcaption {
     position: absolute;
     bottom: 0;
-    background: hsla(var(--ivory-raw) / 0.7);
+    background: hsla(var(--ivory-raw) / 0.9);
     padding: 4px 20px;
     width: 100%;
-
-    // span {
-    //   display: inline-block;
-    //   text-align: justify;
-    // }
   }
 }
 
