--- a/wedding/src/pages/hotels.module.scss
+++ b/wedding/src/pages/hotels.module.scss
@@ -34,6 +34,11 @@
   }
 }
 
+.hotelContact {
+  text-align: center;
+  margin-block: 16px;
+}
+
 @media (min-width: 700px) {
   .travelContainer .hotelList {
     flex-direction: row;
