--- a/wedding/src/components/Layout/Layout.module.scss
+++ b/wedding/src/components/Layout/Layout.module.scss
@@ -18,6 +18,7 @@
   // background-image: url('/s/evergreens.png');
   // background-position: bottom left;
   // height: 375px;
+  // background-color: hsl(120deg 32% 28%);
   position: relative;
 
   .withLove {
