--- a/wedding/src/pages/index.module.scss
+++ b/wedding/src/pages/index.module.scss
@@ -14,7 +14,7 @@
   figcaption {
     position: absolute;
     bottom: 0;
-    background: hsla(var(--ivory-raw) / 0.9);
+    background: hsla(var(--dark-green-raw) / 0.9);
     padding: 4px 20px;
     width: 100%;
   }
