--- a/wedding/src/pages/evergreen.module.scss
+++ b/wedding/src/pages/evergreen.module.scss
@@ -15,7 +15,7 @@
     .categoryHeading {
       background: unset;
       border: none;
-      color: inherit;
+      color: var(--foreground-secondary);
       margin: 0;
       padding: 0;
       width: 100%;
@@ -58,7 +58,7 @@
       height: 2px;
       width: 100%;
       margin: 0 auto;
-      background-color: var(--foreground-primary);
+      background-color: var(--grey-60);
       margin-top: 30px;
     }
   }
