--- a/wedding/src/components/FAQ/FAQ.module.scss
+++ b/wedding/src/components/FAQ/FAQ.module.scss
@@ -12,6 +12,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 8px;
   }
 
   .answer {
@@ -25,7 +26,7 @@
     height: 2px;
     width: 100%;
     margin: 0 auto;
-    background-color: var(--foreground-primary);
+    background-color: var(--grey-60);
     margin-top: 20px;
   }
 }
