--- a/wedding/src/components/RSVPForm/index.module.scss
+++ b/wedding/src/components/RSVPForm/index.module.scss
@@ -19,6 +19,10 @@
   display: flex;
   align-items: center;
   gap: 4px;
+
+  strong {
+    color: var(--foreground-secondary);
+  }
 }
 
 .eventInfo {
