--- a/wedding/src/styles/globals.scss
+++ b/wedding/src/styles/globals.scss
@@ -47,33 +47,16 @@ html {
   --font-family-body: var(--catamaran-font);
   --font-family-heading: var(--fiona-font);
 
-  --snow-0: hsla(213, 44%, 95.1%, 1);
-  --snow-10: hsla(211, 41.2%, 90%, 1);
-  --snow-20: hsla(211, 40.3%, 84.9%, 1);
-  --snow-40: hsla(212, 40.2%, 75.1%, 1);
-  --snow-50: hsla(212, 34.6%, 70%, 1);
-  --snow-70: hsla(213, 24.9%, 55.1%, 1);
-  --snow-90: hsla(212, 34.6%, 30%, 1);
-  --snow-100: hsla(212, 39.2%, 20%, 1);
-  --sunset-0: hsla(40, 60%, 95.1%, 1);
-  --sunset-10: hsla(39, 60.5%, 85.1%, 1);
-  --sunset-20: hsla(33, 50%, 74.9%, 1);
-  --sunset-40: hsla(33, 50%, 60%, 1);
-  --sunset-50: hsla(33, 49.8%, 50%, 1);
-  --sunset-70: hsla(33, 50%, 40%, 1);
-  --sunset-90: hsla(33, 50.3%, 30%, 1);
-  --sunset-100: hsla(33, 51%, 20%, 1);
-  --grey-10: hsla(0, 0%, 93.3%, 1);
-  --grey-20: hsla(0, 0%, 86.7%, 1);
-  --grey-30: hsla(0, 0%, 77.7%, 1);
-  --grey-40: hsla(0, 0%, 66.7%, 1);
-  --grey-50: hsl(0, 0%, 55%);
-  --grey-60: hsl(0, 0%, 44%);
-  --grey-70: hsla(0, 0%, 32.9%, 1);
-  --grey-90: hsla(0, 0%, 20%, 1);
+  --grey-10: hsl(60deg 20% 93.3%);
+  --grey-20: hsl(60deg 8% 86.7%);
+  --grey-30: hsl(60deg 8% 79%);
+  --grey-40: hsl(60deg 8% 66.7%);
+  --grey-50: hsl(60deg 8% 55%);
+  --grey-60: hsl(60deg 8% 44%);
+  --grey-70: hsl(60deg 8% 32.9%);
+  --grey-90: hsl(60deg 8% 20%);
 
   --champagne-pink: hsl(25deg 58% 80%);
-  --lime: hsl(122deg 53% 26%);
 
   --light-moss: hsl(75deg 26% 38%);
   --dark-moss: hsl(75deg 26% 28%);
@@ -84,25 +67,19 @@ html {
 
   --ivory-raw: 60deg 100% 97%;
   --ivory: hsl(var(--ivory-raw));
-  --dark-ivory: hsl(60deg 60% 94%);
 
-  --dark-green-raw: 118deg 80% 6%;
-  --dark-green: hsl(var(--dark-green-raw));
+  --dark-green: hsl(118deg 80% 8%);
+
+  --light-green: hsl(122deg 32% 43%);
+  --lighter-green: hsl(122deg 50% 75%);
 
   --background-primary: var(--dark-green);
-  --foreground-primary: var(--grey-10);
-  --foreground-inverse: var(--ivory);
-  --foreground-pink: hsl(330deg, 100%, 75%);
+  --foreground-primary: var(--grey-30);
+  --foreground-secondary: var(--grey-10);
 
   --swiper-navigation-size: 3rem;
   --swiper-theme-color: var(--orange);
   --swiper-pagination-bullet-inactive-color: var(--foreground-primary);
-}
-
-html[data-theme='dark'] {
-  --background-primary: #101010;
-  --foreground-primary: var(--champagne-pink);
-  --foreground-pink: hsl(330deg, 100%, 75%);
 }
 
 .link {
@@ -112,7 +89,7 @@ html[data-theme='dark'] {
 }
 
 .buttonLink {
-  background-color: var(--lime);
+  background-color: var(--light-green);
   color: white;
 
   padding: 0 20px;
