--- a/wedding/src/components/Logo/Logo.module.css
+++ b/wedding/src/components/Logo/Logo.module.css
@@ -4,8 +4,9 @@
   height: 60px;
   cursor: pointer;
   font-size: 1.5rem;
+  color: var(--foreground-secondary);
 }
 
 .heartpersand {
-  stroke: var(--foreground-primary);
+  stroke: var(--foreground-secondary);
 }
